# theta

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
include/: bitboard.h  gamestate.h  move.h  movegen.h  state.h  tables.h  types.h
notes/: links.md
src/: bitboard.c  bitboard.h  gamestate.c  gamestate.h  macros.h  main.c  move.c  move.h  movegen.c  state.c  tables.c
